Update the portfolio slider and contact form

--- a/index.html
+++ b/index.html
@@ -66,7 +66,6 @@
             </svg>
           </div>
           <section class="bundle">
-<!-- Should be h1s in a new section? Also, text transforms needed -->
             <h3>Basic</h3>
             <ul>
               <li class="bundle-plan"><span>$5.99</span> /MONTH</li>
@@ -141,7 +140,7 @@
             </figcaption>
           </figure>
           <figure id="second-slide">
-            <img class="desktop-slide" src="/img/slider.jpg" width="940" height="336" alt="image advertising Crispers iphone app" title="Crispers/Couders app">
+            <img class="desktop-slide" src="/img/mountains.jpg" width="940" height="336" alt="image advertising Crispers iphone app" title="Crispers/Couders app">
             <figcaption>
               <h3>Crispers</h3>
               <p>Nice, crispy and<br />creative landing page</p>
@@ -150,34 +149,34 @@
             </figcaption>
           </figure>
           <ul class="bullets">
-            <li><a class="active" href="#first-slide">First Bullet</a></li>
-            <li><a href="#second-slide">Second Bullet</a></li>
-            <li><a href="#third-slide">Third Bullet</a></li>
-            <li><a href="#fourth-slide">Fourth Bullet</a></li>
-            <li><a href="#fifth-slide">Fifth Bullet</a></li>
+            <li><a class="current" aria-label="First Slide" href="#first-slide"><span></span></a></li>
+            <li><a aria-label="Second Slide" href="#second-slide"></a></li>
+            <li><a aria-label="Third Slide" href="#third-slide"></a></li>
+            <li><a aria-label="Fourth Slide" href="#fourth-slide"></a></li>
+            <li><a aria-label="Fifth Slide" href="#fifth-slide"></a></li>
           </ul>
         </div>
 
-        <nav title="portfolio navigation">
-          <ul title="portfolio-categories">
-            <li><a class="portfolio-menu-item portfolio-selected-category" href="">All works</a></li>
-            <li><a class="portfolio-menu-item" href="">Webdesign</a></li>
-            <li><a class="portfolio-menu-item" href="">UI design</a></li>
-            <li><a class="portfolio-menu-item" href="">Icon design</a></li>
-            <li><a class="portfolio-menu-item" href="">Brand &amp; Logotypes</a></li>
+        <nav class="portfolio-navigation">
+          <ul>
+            <li><a class="nav-item portfolio-nav-active" href="">All works</a></li>
+            <li><a class="nav-item" href="">Webdesign</a></li>
+            <li><a class="nav-item" href="">UI design</a></li>
+            <li><a class="nav-item" href="">Icon design</a></li>
+            <li><a class="nav-item" href="">Brand &amp; Logotypes</a></li>
           </ul>
         </nav>
 
         <figure class="portfolio-item">
-          <a class="portfolio-link-hover" href=""><img class="portfolio-opacity" src="/img/ytube-app.jpg" alt="Image of Youtube app on a handheld device" title="Youtube app image"></a>
+          <a class="portfolio-link" href=""><img class="portfolio-opacity" src="/img/ytube-app.jpg" alt="Image of Youtube app on a handheld device" title="Youtube app image" width="300" height="220"></a>
           <figcaption>
             <h4 class="portfolio-caption-header">Youtube iphone app</h4>
-            <p class="portfolio-category">Icons design, brand &amp; logotypes</p>
+            <p class="portfolio-category">UI design, brand &amp; logotypes</p>
           </figcaption>
         </figure>
 
         <figure class="portfolio-item">
-          <a class="portfolio-link-hover" href=""><img class="portfolio-opacity" src="/img/hexagon.jpg" alt="Image of Avengers welcome screen" title="Avengers welcome screen"></a>
+          <a class="portfolio-link" href=""><img class="portfolio-opacity" src="/img/hexagon.jpg" alt="Image of Avengers welcome screen" title="Avengers welcome screen" width="300" height="220"></a>
           <figcaption>
             <h4 class="portfolio-caption-header">Hexagon onepage</h4>
             <p class="portfolio-category">Webdesign, brand &amp; logotypes</p>
@@ -185,7 +184,7 @@
         </figure>
 
         <figure class="portfolio-item">
-          <a class="portfolio-link-hover" href=""><img class="portfolio-opacity" src="/img/sketches.jpg" alt="Image of drawing tools and sketches of fantasy characters" title="Fantasy character sketches"></a>
+          <a class="portfolio-link" href=""><img class="portfolio-opacity" src="/img/sketches.jpg" alt="Image of drawing tools and sketches of fantasy characters" title="Fantasy character sketches" width="300" height="220"></a>
           <figcaption>
             <h4 class="portfolio-caption-header">Sketches icon</h4>
             <p class="portfolio-category">Icons design, brand &amp; logotypes</p>
@@ -193,7 +192,7 @@
         </figure>
 
         <figure class="portfolio-item">
-          <a class="portfolio-link-hover" href=""><img class="portfolio-opacity" src="/img/logotypes.jpg" alt="Image of logotypes on screen" title="Logotypes"></a>
+          <a class="portfolio-link" href=""><img class="portfolio-opacity" src="/img/logotypes.jpg" alt="Image of logotypes on screen" title="Logotypes" width="300" height="220"></a>
           <figcaption>
             <h4 class="portfolio-caption-header">Logotypes volume</h4>
             <p class="portfolio-category">UI design, brand &amp; logotypes</p>
@@ -201,7 +200,7 @@
         </figure>
 
         <figure class="portfolio-item">
-          <a class="portfolio-link-hover" href=""><img class="portfolio-opacity" src="/img/flight.jpg" alt="Image of app screen with points displayed" title="Points screen"></a>
+          <a class="portfolio-link" href=""><img class="portfolio-opacity" src="/img/flight.jpg" alt="Image of app screen with points displayed" title="Points screen" width="300" height="220"></a>
           <figcaption>
             <h4 class="portfolio-caption-header">Flight control</h4>
             <p class="portfolio-category">Webdesign, brand &amp; logotypes</p>
@@ -209,7 +208,7 @@
         </figure>
 
         <figure class="portfolio-item">
-          <a class="portfolio-link-hover" href=""><img class="portfolio-opacity" src="/img/ytube-app.jpg" alt="Image of Youtube app on a handheld device" title="Youtube app image"></a>
+          <a class="portfolio-link" href=""><img class="portfolio-opacity" src="/img/ytube-app.jpg" alt="Image of Youtube app on a handheld device" title="Youtube app image" width="300" height="220"></a>
           <figcaption>
             <h4 class="portfolio-caption-header">Youtube app</h4>
             <p class="portfolio-category">Icons design, brand &amp; logotypes</p>
@@ -217,7 +216,7 @@
         </figure>
 
         <figure class="portfolio-item">
-          <a class="portfolio-link-hover" href=""><img class="portfolio-opacity" src="/img/management.jpg" alt="Image of app screen for claim management" title="Claim management screen"></a>
+          <a class="portfolio-link" href=""><img class="portfolio-opacity" src="/img/management.jpg" alt="Image of app screen for claim management" title="Claim management screen" width="300" height="220"></a>
           <figcaption>
             <h4 class="portfolio-caption-header">Management</h4>
             <p class="portfolio-category">UI design, brand &amp; logotypes</p>
@@ -225,7 +224,7 @@
         </figure>
 
         <figure class="portfolio-item">
-          <a class="portfolio-link-hover" href=""><img class="portfolio-opacity" src="/img/korean.jpg" alt="Image of recipe app screen for korean bulgogi beef" title="Korean beef recipe screen"></a>
+          <a class="portfolio-link" href=""><img class="portfolio-opacity" src="/img/korean.jpg" alt="Image of recipe app screen for korean bulgogi beef" title="Korean beef recipe screen" width="300" height="220"></a>
           <figcaption>
             <h4 class="portfolio-caption-header">Korean beef</h4>
             <p class="portfolio-category">Webdesign, brand &amp; logotypes</p>
@@ -233,7 +232,7 @@
         </figure>
 
         <figure class="portfolio-item">
-          <a class="portfolio-link-hover" href=""><img class="portfolio-opacity" src="/img/facebook-thumb.jpg" alt="Image of Facebook like and dislike thumb icons" title="Facebook thumbs"></a>
+          <a class="portfolio-link" href=""><img class="portfolio-opacity" src="/img/facebook-thumb.jpg" alt="Image of Facebook like and dislike thumb icons" title="Facebook thumbs" width="300" height="220"></a>
           <figcaption>
             <h4 class="portfolio-caption-header">Facebook thumbs</h4>
             <p class="portfolio-category">Icons design, brand &amp; logotypes</p>
@@ -410,7 +409,7 @@
           <input type="text" name="company-name" placeholder="Company name">
           <input type="email" name="company-email" placeholder="Your@mail.com">
           <textarea name="company-message" rows="8" cols="60">Message...</textarea>
-          <input type="submit" name="submit-button" value="SEND MESSAGE">
+          <input class="form-submit" type="submit" name="submit-button" value="SEND MESSAGE">
         </form>
         <figure class="contact-map">
           <img src="/img/map-mobile.jpg" alt="Map of San Francisco location" title="San Francisco location">
