adjust the opaque down arrow below the header

--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
           <button class="icon-chevron-right client-button circle"></button>
         </section>
       </article>
-      <article id="contact" class="contact-section section-arrows-white">
+      <article id="contact" class="contact section-arrows-white">
         <div class="primary-header-light">
           <svg height="2" width="50%">
              <line x1="0" y1="0" x2="100%" y2="0" style="stroke:#ffffff;stroke-width:2" />
@@ -412,11 +412,11 @@
           <input class="form-submit" type="submit" name="submit-button" value="SEND MESSAGE">
         </form>
         <figure class="contact-map">
-          <img src="/img/map-mobile.jpg" alt="Map of San Francisco location" title="San Francisco location">
-          <figcaption class="contact-map-caption">
-            <a class="contact-phone" href="tel:970897580">+970 897 580 <span class="contact-weight-light">(7:00 - 20:00)</span></a>
+          <img src="/img/map-mobile.jpg" alt="Map of San Francisco location" title="San Francisco location" width="460" height="265">
+          <figcaption class="contact-map-caption section-arrows-opaque">
+            <a class="contact-phone" href="tel:970897580">+970 897 580 <span>(7:00 - 20:00)</span></a>
             <a class="contact-email" href="mailto:info@company.com">info@company.com</a>
-            <a class="contact-location" href="">USA, <span class="contact-weight-light">San Francisco, 57010, Little Parry St. 826/31</span></a>
+            <a class="contact-location" href="">USA, <span>San Francisco, 57010, Little Parry St. 826/31</span></a>
           </figcaption>
         </figure>
       </article>
