Refactor team profile section with Sass

--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
           <a class="contact-us-button">Contact us</a>
         </aside>
       </article>
-      <article id="team" class="team section-arrows-black">
+      <article id="team" class="team-container section-arrows-black">
         <div class="header-container">
           <svg height="2" width="50%">
              <line x1="0" y1="0" x2="100%" y2="0" style="stroke:#b9bdbf;stroke-width:2" />
@@ -321,14 +321,14 @@
              <line x1="0" y1="0" x2="100%" y2="0" style="stroke:#b9bdbf;stroke-width:2" />
           </svg>
         </div>
-        <p class="team-text team-description-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia.</p>
-        <ul>
+        <p class="team-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia.</p>
+        <ul class="team-profiles-container">
           <li class="team-profile">
             <h2 class="profile-header">Jonathan Doe</h2>
-            <h3 class="team-text profile-text">CEO, UI&amp;UX designer</h3>
+            <p class="team-text profile-text">CEO, UI&amp;UX designer</p>
             <figure>
-              <img src="/img/jonathan.jpg" alt="Picture of Jonathan Doe" title="Jonathan Doe" class="profile-image circle">
-              <figcaption>
+              <img src="/img/jonathan.jpg" alt="Picture of Jonathan Doe" title="Jonathan Doe" class="profile-image">
+              <figcaption class="profile-figure">
                 <ul class="social-icons">
                   <li>
                     <a href="https://www.facebook.com" class="icon-facebook"><span class="screen-reader-only">Friend me on Facebook</span></a>
@@ -352,10 +352,10 @@
           </li>
           <li class="team-profile">
             <h2 class="profile-header">Jannete Doe</h2>
-            <h3 class="team-text profile-text">Business &amp; marketing</h3>
+            <p class="team-text profile-text">Business &amp; marketing</p>
             <figure>
-              <img src="/img/jannete.jpg" alt="Picture of Jannete Doe" title="Jannete Doe" class="profile-image circle">
-              <figcaption>
+              <img src="/img/jannete.jpg" alt="Picture of Jannete Doe" title="Jannete Doe" class="profile-image">
+              <figcaption class="profile-figure">
                 <ul class="social-icons">
                   <li><a href="https://www.facebook.com" class="icon-facebook"></a></li>
                   <li><a href="https://twitter.com" class="icon-twitter"></a></li>
@@ -369,10 +369,10 @@
           </li>
           <li class="team-profile">
             <h2 class="profile-header">Jane Ella Doe</h2>
-            <h3 class="team-text profile-text">UX specialist</h3>
+            <p class="team-text profile-text">UX specialist</p>
             <figure>
-              <img src="/img/jane.jpg" alt="Picture of Jane Ella Doe" title="Jane Ella Doe" class="profile-image circle">
-              <figcaption>
+              <img src="/img/jane.jpg" alt="Picture of Jane Ella Doe" title="Jane Ella Doe" class="profile-image">
+              <figcaption class="profile-figure">
                 <ul class="social-icons">
                   <li><a href="https://www.facebook.com" class="icon-facebook"></a></li>
                   <li><a href="https://twitter.com" class="icon-twitter"></a></li>
@@ -386,10 +386,10 @@
           </li>
           <li class="team-profile">
             <h2 class="profile-header">Jessie Doe</h2>
-            <h3 class="team-text profile-text">Business and legacy</h3>
+            <p class="team-text profile-text">Business and legacy</p>
             <figure>
-              <img src="/img/jessie.jpg" alt="Picture of Jessie Doe" title="Jessie Doe" class="profile-image circle">
-              <figcaption>
+              <img src="/img/jessie.jpg" alt="Picture of Jessie Doe" title="Jessie Doe" class="profile-image">
+              <figcaption class="profile-figure">
                 <ul class="social-icons">
                   <li><a href="https://www.facebook.com" class="icon-facebook"></a></li>
                   <li><a href="https://twitter.com" class="icon-twitter"></a></li>
@@ -402,7 +402,7 @@
             </figure>
           </li>
         </ul>
-        <section class="clients">
+        <section class="client-container">
           <div class="header-container">
             <svg height="2" width="30%">
               <line x1="0" y1="0" x2="100%" y2="0" style="stroke:#b9bdbf;stroke-width:2" />
@@ -412,11 +412,11 @@
               <line x1="0" y1="0" x2="100%" y2="0" style="stroke:#b9bdbf;stroke-width:2" />
             </svg>
           </div>
-          <a class="icon-chevron-left client-button circle"></a>
+          <a class="icon-chevron-left client-button"></a>
           <ul>
             <li>
               <figure class="client-figure">
-                <img src="/img/broderic.jpg" alt="Image of Matthew Broderic" title="Matthew Broderic" class="client-image circle">
+                <img src="/img/broderic.jpg" alt="Image of Matthew Broderic" title="Matthew Broderic" class="client-image">
                 <figcaption class="client-caption">
                   <h3 class="team-header client-header"><span class="client-name">Matthew Broderic</span> (CEO Hopicola Inc.)</h3>
                   <p class="team-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard my text ever since the 1500s, when lorem upsum is the best text for you.</p>
@@ -424,7 +424,7 @@
               </figure>
             </li>
           </ul>
-          <a class="icon-chevron-right client-button circle"></a>
+          <a class="icon-chevron-right client-button"></a>
         </section>
       </article>
       <article id="contact" class="contact-section section-arrows-white">
