Refactor client profile component with Sass

--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
         <ul class="team-profiles-container">
           <li class="team-profile">
             <h2 class="profile-header">Jonathan Doe</h2>
-            <p class="team-text profile-text">CEO, UI&amp;UX designer</p>
+            <p class="profile-text">CEO, UI&amp;UX designer</p>
             <figure>
               <img src="/img/jonathan.jpg" alt="Picture of Jonathan Doe" title="Jonathan Doe" class="profile-image">
               <figcaption class="profile-figure">
@@ -345,13 +345,13 @@
                     <a href="https://plus.google.com" class="icon-google-plus"><span class="screen-reader-only">Friend me on Google+</span></a>
                   </li>
                 </ul>
-                <p class="team-text profile-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard.</p>
+                <p class="profile-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard.</p>
               </figcaption>
             </figure>
           </li>
           <li class="team-profile">
             <h2 class="profile-header">Jannete Doe</h2>
-            <p class="team-text profile-text">Business &amp; marketing</p>
+            <p class="profile-text">Business &amp; marketing</p>
             <figure>
               <img src="/img/jannete.jpg" alt="Picture of Jannete Doe" title="Jannete Doe" class="profile-image">
               <figcaption class="profile-figure">
@@ -362,13 +362,13 @@
                   <li><a href="https://www.linkedin.com" class="icon-linkedin2"></a></li>
                   <li><a href="https://plus.google.com" class="icon-google-plus"></a></li>
                 </ul>
-                <p class="team-text profile-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard.</p>
+                <p class="profile-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard.</p>
               </figcaption>
             </figure>
           </li>
           <li class="team-profile">
             <h2 class="profile-header">Jane Ella Doe</h2>
-            <p class="team-text profile-text">UX specialist</p>
+            <p class="profile-text">UX specialist</p>
             <figure>
               <img src="/img/jane.jpg" alt="Picture of Jane Ella Doe" title="Jane Ella Doe" class="profile-image">
               <figcaption class="profile-figure">
@@ -379,13 +379,13 @@
                   <li><a href="https://www.linkedin.com" class="icon-linkedin2"></a></li>
                   <li><a href="https://plus.google.com" class="icon-google-plus"></a></li>
                 </ul>
-                <p class="team-text profile-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard.</p>
+                <p class="profile-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard.</p>
               </figcaption>
             </figure>
           </li>
           <li class="team-profile">
             <h2 class="profile-header">Jessie Doe</h2>
-            <p class="team-text profile-text">Business and legacy</p>
+            <p class="profile-text">Business and legacy</p>
             <figure>
               <img src="/img/jessie.jpg" alt="Picture of Jessie Doe" title="Jessie Doe" class="profile-image">
               <figcaption class="profile-figure">
@@ -396,7 +396,7 @@
                   <li><a href="https://www.linkedin.com" class="icon-linkedin2"></a></li>
                   <li><a href="https://plus.google.com" class="icon-google-plus"></a></li>
                 </ul>
-                <p class="team-text profile-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard.</p>
+                <p class="profile-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard.</p>
               </figcaption>
             </figure>
           </li>
@@ -417,8 +417,8 @@
               <figure class="client-figure">
                 <img src="/img/broderic.jpg" alt="Image of Matthew Broderic" title="Matthew Broderic" class="client-image">
                 <figcaption class="client-caption">
-                  <h3 class="team-header client-header"><span class="client-name">Matthew Broderic</span> (CEO Hopicola Inc.)</h3>
-                  <p class="team-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard my text ever since the 1500s, when lorem upsum is the best text for you.</p>
+                  <h3 class="client-header"><span class="client-name">Matthew Broderic</span> (CEO Hopicola Inc.)</h3>
+                  <p class="client-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard my text ever since the 1500s, when lorem upsum is the best text for you.</p>
                 </figcaption>
               </figure>
             </li>
