Refactor skills component with Sass

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
         </div>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-        <section>
+        <section class="skills-container">
           <div class="header-container">
             <svg height="2" width="30%">
               <line x1="0" y1="0" x2="100%" y2="0" style="stroke:#b9bdbf;stroke-width:2" />
@@ -262,9 +262,9 @@
               <line x1="0" y1="0" x2="100%" y2="0" style="stroke:#b9bdbf;stroke-width:2" />
             </svg>
           </div>
-          <ul class="skills">
+          <ul class="skills-list">
             <li>
-              <figure>
+              <figure class="progress-figure">
                 <figcaption>
                   <h3 class="progress-header">Photoshop</h3>
                 </figcaption>
@@ -272,7 +272,7 @@
               </figure>
             </li>
             <li>
-              <figure>
+              <figure class="progress-figure">
                 <figcaption>
                   <h3 class="progress-header">HTML/CSS</h3>
                 </figcaption>
@@ -280,7 +280,7 @@
               </figure>
             </li>
             <li>
-              <figure>
+              <figure class="progress-figure">
                 <figcaption>
                   <h3 class="progress-header">Illustrator</h3>
                 </figcaption>
@@ -288,7 +288,7 @@
               </figure>
             </li>
             <li>
-              <figure>
+              <figure class="progress-figure">
                 <figcaption>
                   <h3 class="progress-header">PHP</h3>
                 </figcaption>
@@ -296,7 +296,7 @@
               </figure>
             </li>
             <li>
-              <figure>
+              <figure class="progress-figure">
                 <figcaption>
                   <h3 class="progress-header">Wordpress</h3>
                 </figcaption>
