Refactor aside component with Sass

--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
         </section>
         <aside>
           <h2 class="join-us-header">Do you want to be one of Avengers? Join us!</h2>
-          <a class="contact-us-button">Contact us</a>
+          <a href="#contact" class="contact-button">Contact us</a>
         </aside>
       </article>
       <article id="team" class="team-container section-arrows-black">
