edit the style of the main menu

--- a/index.html
+++ b/index.html
@@ -13,22 +13,22 @@
     <link rel="stylesheet" href="/css/main.css">
   </head>
   <body>
-<!--     <nav class="menu">
+    <nav class="menu">
       <ul>
-        <li><a href="#home">Home.</a></li>
+        <li><a href="#home" class="current-page">Home.</a></li>
         <li><a href="#services">Services.</a></li>
         <li><a href="#portfolio">Portfolio.</a></li>
         <li><a href="#about">About.</a></li>
         <li><a href="#team">Team.</a></li>
         <li><a href="#contact">Contact.</a></li>
       </ul>
-    </nav> -->
+    </nav>
     <header id="home" class="header-content">
       <img class="logo" width="21" height="32" src="/img/logo-tear-drop.svg" alt="Logo for Avengers" title="Avengers logo">
       <h1 class="header-logo-text">Hi there! We're Avengers, <strong>creative design agency</strong> we build <strong class="curve-underline">awesome</strong> mobile and websites</h1>
     </header>
     <main>
-      <article id="services" class="services-container section-arrows-clear">
+      <article id="services" class="services-container section-arrows-white">
         <div class="header-container">
           <svg height="2" width="50%">
              <line x1="0" y1="0" x2="100%" y2="0" style="stroke:#ffffff;stroke-width:2" />
