add orange arrow to footer

--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
         </figure>
       </article>
     </main>
-    <footer>
+    <footer class="section-arrows-orange">
       <p>Theme by <span class="footer-name">Pierre Borodin</span> <span class="footer-copyright">&copy; copyright 2012</span></p>
       <ul class="social-icons">
         <li>
