Refactor footer section with Sass

--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
       </article>
     </main>
     <footer>
-      <p>Theme by <span class="footer-name">Pierre Borodin</span> <span class="footer-copyright">&copy; copyright 2012</span></p>
+      <p class="footer-text">Theme by <span class="footer-name">Pierre Borodin</span> <span class="footer-copyright">&copy; copyright 2012</span></p>
       <ul class="social-icons">
         <li>
           <a href="https://www.facebook.com" class="icon-facebook"><span class="screen-reader-only">Friend us on Facebook</span></a>
